fixed bug where pop-up body got cut off

--- a/source/alertify.css
+++ b/source/alertify.css
@@ -92,6 +92,7 @@ button {
 }
 
 .alertify .ajs-header {
+	min-height: 49px;
 	margin-bottom: 0;
 	padding: 16px 36px 35px 100px;
 	background-image: url(../media/iconFullSize.png);
